<resources>
    <string name="app_name">Court Counter</string>
    <string name="score_A">0</string>
    <string name="score_B">0</string>
    <string name="team_A">Team A</string>
    <string name="team_B">Team B</string>
    <string name="three_pts">+3 Points</string>
    <string name="two_pts">+2 Points</string>
    <string name="one_pt">Free Throw</string>
    <string name="reset">Reset</string>
</resources>