<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16sp">

        <LinearLayout
            android:id="@+id/team_pane"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="8dp"
            tools:context="com.example.faraonc.courtcounter.MainActivity">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/team_A"
                    android:textColor="@color/colorTeam"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/score_A"
                    android:textColor="@color/colorScore"
                    android:textSize="56sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/three_pts"
                    android:textAllCaps="true" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="addTwoForTeamA"
                    android:text="@string/two_pts"
                    android:textAllCaps="true" />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="addOneForTeamA"
                    android:text="@string/one_pt"
                    android:textAllCaps="true" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/team_B"
                    android:textColor="@color/colorTeam"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/score_B"
                    android:textColor="@color/colorScore"
                    android:textSize="56sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/three_pts"
                    android:textAllCaps="true" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="addTwoForTeamB"
                    android:text="@string/two_pts"
                    android:textAllCaps="true" />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="addOneForTeamB"
                    android:text="@string/one_pt"
                    android:textAllCaps="true" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/team_pane"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:onClick="reset"
                android:text="@string/reset" />
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>